Fit Event model to FullCalendar event
